complete the static UI for homepage and login page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
         theme: {
           extend: {
             colors: {
-              'brand-green': '#22c55e',
+              'teal-green': '#20B2AA',
+              'orange-custom': '#FF6B35',
+              'brand-green': '#20B2AA',
               'brand-green-dark': '#16a34a',
             }
           }
